# soma_compiler

./: .clang-format  CMakeLists.txt
.github/workflows/: google_test.yml
documentation/syntax_analysis/: grammar.bnf  grammar.txt
src/: errors.cpp  errors.h  lexical_analysis.cpp  lexical_analysis.h  main.cpp  optimiser.cpp  optimiser.h  semantic_analysis.cpp  semantic_analysis.h  symbol_table.cpp  symbol_table.h  syntax_analysis.cpp  syntax_analysis.h
src/util/: enum.h  errors.h  types.h
tests/: lexical_analysis_tests.cpp  main.cpp  semantic_analysis_tests.cpp  syntax_analysis_tests.cpp
